[tool.poetry]
name = "snake-template"
version = "1.0.0"
description = "Template pour le jeu Snake -- Fil Rouge stages seconde"
authors = [
  "Sara Riva <sara.riva@univ-lille.fr>",
  "Pauline Puteaux <pauline.puteaux@cnrs.fr>",
  "Oliver Irwin <oliver.irwin@univ-lille.fr>",
  "Madeleine Eyraud <madeleine.eyraud@univ-lille.fr>",
  "Alexandre D'Hooge <alexandre.dhooge@univ-lille.fr>",
  "Ziyad Houssaini <houssaini.ziyad@protonmail.com>",
  "Gael Vanderlee <gael.vanderlee@gmail.com>",
  "Younoussa Sow <younoussa.sow@inria.fr>",
  "Théo Gueuret <theo.gueuret@univ-lille.fr>"
]

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.12"
pygame = "^2.5.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
